package rtidb.common;
option cc_generic_services = false;
option java_package = "com._4paradigm.rtidb.common";
option java_outer_classname = "Common";

message KvPair {
    optional int64 time = 1;
    optional bytes value = 2;
}

message KvList {
    optional string pk = 1;
    repeated KvPair pairs = 2;
}

message ColumnDesc {
    required string name = 1;
    optional string type = 2;
    optional bool add_ts_idx = 3 [default=false]; 
    optional bool is_ts_col = 4 [default=false];
    optional uint64 ttl = 5;
}

message ColumnKey {
    optional string index_name = 1;
    repeated string col_name = 2;
    optional string ts_name = 3;
}
